-- The name of the package.
name:                parsec-plus-base

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             1.0.5.7

-- A short (one-line) description of the package.
synopsis:            Parsecable class, and utilities; base version without file
                     parsing.

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Martyn J. Pearce

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          haskell@sixears.com

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  ghc-options:         -W -Wall -fhelpful-errors
  -- Modules exported by the library.
  exposed-modules:     ParsecPlusBase, Parsec.Error

  -- modules included in this library but not exported.
  other-modules:

  default-extensions:  DeriveAnyClass
                     , DeriveGeneric
                     , FlexibleContexts
                     , NoImplicitPrelude
                     , PatternSynonyms
                     , Rank2Types
                     , TemplateHaskell
                     , TypeApplications
                     , UnicodeSyntax
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base, base-unicode-symbols, data-textual, deepseq, lens
                     , mtl, parsec, text-printer

                     , has-callstack >= 1.0.1.0
                     , monaderror-io >= 1.2.2.0
                     , more-unicode  >= 0.0.16.0

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

-------------------------------------------------------------------------------

test-suite parsec-plus-base-test
  ghc-options:      -O2 -W -Wall -fhelpful-errors
  type:             exitcode-stdio-1.0
  hs-source-dirs:   t
  main-is:          parsec-plus-base-test.hs
  build-depends:    base, parsec-plus-base
  default-language: Haskell2010

-------------------------------------------------------------------------------
